--- a/css/main.css
+++ b/css/main.css
@@ -79,3 +79,15 @@ footer {
 footer a{
     color:goldenrod;
 }
+
+.flex-item{
+    background-color: hotpink;
+    width: 30%;
+    margin: 1em;
+    text-align: center;
+}
+
+.section-item{
+    margin: 0 auto;
+    width: 100%;
+}
